add project pages

--- a/src/components/footer/_footer.pug
+++ b/src/components/footer/_footer.pug
@@ -1,7 +1,9 @@
-// FOOTER :: START
-footer.footer
-  .container
-    .footer__wrapper
+// PAGE-FOOTER :: START
+footer.page-footer
+  ._container.container
+    ._copyright © OCMS, 2019
+
+    a._feedback(href='#' title='Связаться с нами') Связаться с нами
       
       
-// FOOTER :: END
+// PAGE-FOOTER :: END
