--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -1,8 +1,15 @@
 ---
 title: Homepage title
 outClass: homepage
+login: true
 ---
 extends shared/_layout
 block content
   
-  include ../components/test/_test.pug
+  .page-main.page-body__main
+    .main-body._body
+      .main-content._content
+        ._container.container
+          ._inner
+
+            
