--- a/src/sass/elements/_buttons.sass
+++ b/src/sass/elements/_buttons.sass
@@ -18,6 +18,14 @@ button
   &--block
     display: block
     width: 100%
+  
+  &-primary
+    padding: 12px 19px
+    color: $colorWhite
+    background: $colorPrimary
+    border-radius: 4px
+    &:hover
+      background: rgba($colorPrimary, .9)
 
   &-example
     // please use paddings instead of line-height to control btn height
