--- a/src/components/footer/_footer.sass
+++ b/src/components/footer/_footer.sass
@@ -1,7 +1,10 @@
 // FOOTER
-.footer
-  background: #f5f5f5
-  &__wrapper
+.page-footer
+  padding: 15px 0
+  color: $colorLight
+  font-size: 12px
+  background-color: $colorBg
+
+  &__container
     display: flex
-    align-items: center
-    height: 100px
+    justify-content: space-between
