--- a/src/components/header/_header.pug
+++ b/src/components/header/_header.pug
@@ -1,35 +1,11 @@
-// HEADER :: START
-header.header
-  .container
-    .header__wrapper
-      a(href="homepage.html").header__logo
-        +svgMono('email')
-      ul.header__menu
-        li
-          a(href="homepage.html") Homepage
-        li
-          a(href="page.html") Shop
-        li
-          a(href="page.html") Lorem
-      
-      .header__cta
-        .header__cart
-          +svgMono('email')
-      
-      .header__hamburger
-        .hamburger.hamburger--squeeze(js-hamburger)
-          .hamburger-box
-            .hamburger-inner
-    
-// MOBILE NAVI
-.mobile-navi
-  .mobile-navi__wrapper
-    ul.mobile-navi__menu
-      li
-        a(href="homepage.html") Homepage
-      li
-        a(href="page.html") Shop
-      li
-        a(href="page.html") Lorem
-    .mobile-navi__cta
-      a(href="mailto:sergey@khmelevskoy.co") sergey@khmelevskoy.co
+// PAGE-HEADER :: START
+.page-header.page__header
+  ._container.container
+
+    a._logo(href='homepage.html' title='')
+      +svgMono('logo')
+
+    ._menu
+
+    ._actions
+// PAGE-HEADER :: END
