--- a/src/components/header/_header.sass
+++ b/src/components/header/_header.sass
@@ -1,80 +1,25 @@
 /* HEADER
-.header
-  position: fixed
-  top: 0
-  right: 0
-  left: 0
-  z-index: 9
-  background: #f5f5f5
+.page-header
+  color: $colorWhite
+  background: $colorPrimary
   will-change: transform
   backface-visibility: hidden
   transform-style: preserve-3d
-  &__wrapper
+  
+  &__container
     display: flex
-    align-items: center
+    padding-right: 0
+    padding-left: 0
     height: 70px
-
+  
   &__logo
-    flex: 0 0 auto
-    font-size: 35px
-    padding-right: 30px
-
-  &__menu
-    flex: 0 1 auto
     display: flex
     align-items: center
-    font-size: 18px
-    margin: 0 auto
-    padding: 0
-    li
-      display: inline-block
-      margin-right: 30px
-    a
-      transition: color .25s $ease
-      &:hover
-        color: tomato
+    justify-content: center
+    flex: 0 0 142px
+    max-width: 142px
+    border-right: 1px solid rgba($colorWhite, 0.15)
 
-  &__cta
-    margin-left: auto
-    padding-left: 30px
-
-  &__hamburger
-    // display: none
-    padding-left: 20px
-
-  &.is-fixed
-    // should be normalized to -100% scroll at this point
-    position: fixed
-    // visibility: hidden
-    transform: translate3d(0,-100%,0) !important
-    transition: transform .25s $ease
-    .header__wrapper
-      padding-top: 10px
-      padding-bottom: 10px
-
-  &.is-fixed-visible
-    // visibility: visible
-    transform: translate3d(0,0,0) !important
-
-  &.is-transitioning
-    transition: transform .25s $ease
-    transform: translate3d(0,-100%,0) !important
-
-
-+r($lg)
-  .header
-    &__cta
-      display: none
-
-+r($md)
-  .header
-    &__menu
-      display: none
-    &__hamburger
-      margin-left: auto
-      display: block
-
-+r($sm)
-  .header
-    &__logo
-      font-size: 30px
+    .ico-mono-logo
+      width: 82px
+      height: 30px
