--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -2,12 +2,52 @@
 
 
 // WORKS KIND OF bootstrap - group have label and input
+.ui-row
+  display: flex
+  margin-bottom: 25px
+  margin-left: -10px
+  margin-right: -10px
+
+.ui-col
+  flex: 1 1 auto
+  max-width: 100%
+  padding-left: 10px
+  padding-right: 10px
+
+  &.is-6
+    flex-basis: 50%
+    max-width: 50%
+  
+  &.is-auto
+    flex: 0 0 auto
+
 .ui-group
   position: relative
-  margin-bottom: 20px
-  label
+  margin-bottom: 25px
+
+  &:last-child
+    margin-bottom: 0
+
+  &--inline
+    display: flex
+    align-items: flex-start
+
+    .ui-group__label
+      flex: 0 0 150px
+      max-width: 150px
+      margin-bottom: 0
+      margin-top: 12px
+      padding-right: 20px
+
+    .ui-group__ui-toggle
+      margin-top: 12px
+  
+  &__content
+    flex: 1 1 auto
+
+  & > label
     display: block
-    margin-bottom: 10px
+    margin-bottom: 12px
 
 // for input or textarea element
 .ui-input
@@ -17,9 +57,10 @@
   background: white
   font-family: $systemFont
   color: $fontColor50
-  border: 1px solid $borderColor
+  border: 1px solid $colorBg
+  background-color: $colorBg
   border-radius: 4px
-  padding: 12px 15px
+  padding: 11px 15px
   &.has-error
     color: $colorRed
     &::placeholder
@@ -43,7 +84,7 @@
     &:checked
       + label
         &::before
-          border-color: $colorGreen
+          border-color: $colorPrimary
         &::after
           transform: translateY(-50%) scale(1)
   label
@@ -59,6 +100,7 @@
       display: inline-block
       content: ' '
       size: 20px
+      margin-top: -1px
       background-color: white
       border: 1px solid #AFB7C0
       border-radius: 4px
@@ -71,10 +113,11 @@
       left: 6px
       top: 50%
       transform: translateY(-50%) scale(0)
+      margin-top: -1px
       display: inline-block
       content: ' '
       size: 10px
-      background: $colorGreen
+      background: $colorPrimary
       border-radius: 50%
       // background-image: svg-load('../../images/svg/checkbox.svg')
       // background-repeat: no-repeat
@@ -87,3 +130,67 @@
       line-height: 1.3
       font-size: 14px
       cursor: pointer
+
+
+/* Toggle
+.ui-toggle
+  display: inline-block
+  cursor: pointer
+
+  &__input
+    display: none
+    width: 0.1px
+    height: 0.1px
+    opacity: 0
+    position: absolute
+    top: 0
+    left: 0
+    &:checked
+      & ~ .ui-toggle__handle
+        background-color: $colorPrimary
+
+        &::before
+          left: 14px
+  
+  &__handle
+    position: relative
+    display: block
+    width: 32px
+    height: 20px
+    background-color: $colorBg
+    border-radius: 15px
+    transition: background-color .2s ease
+
+    &::before
+      content: ''
+      position: absolute
+      top: 3px
+      left: 3px
+      size: 14px
+      background-color: $colorWhite
+      border-radius: 50%
+      transition: left .2s ease
+
+
+
+/* Counter
+.ui-counter
+  display: inline-flex
+  width: 160px
+  height: 40px
+  border: 1px solid $colorBg
+  overflow: hidden
+  border-radius: 4px
+
+  &__btn
+    flex-shrink: 0
+    width: 40px
+    font-size: 22px
+    background-color: $colorWhite
+  
+  &__input
+    flex: 1 1 auto
+    min-width: 0
+    text-align: center
+    border-color: transparent
+    background-color: $colorBg
