--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -18,11 +18,12 @@ body, html
   color: $fontColor
   font-family: $baseFont
   // font-family: "Helvetica", -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica', 'Ubuntu', 'Cantarell', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'
-  font-size: 16px
+  font-size: 14px
+  line-height: 1.57
   min-width: 320px
   max-width: 100%
   margin: 0
-  overflow-x: hidden
+  overflow: hidden
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
@@ -40,30 +41,213 @@ body, html
   left: 0
   width: 100%
 
+.required
+  color: $colorDanger
+  font-style: normal
+
 .page
   display: flex
   flex-direction: column
-  min-height: 100vh
-  &__content
-    // used for sticky footer (flexbox way)
-    flex: 1 0 auto
-    display: flex
-    flex-direction: column
-    // fixed container fix
-    padding-top: 150px
+  height: 100vh
+
+  &__header, &__footer
+    flex-shrink: 0
+  
+  &__body
+    flex: 1 1 auto
+
+    &:first-child
+      padding-top: 0
 
 .container
-  max-width: 1200px
   width: 100%
   margin-left: auto
   margin-right: auto
-  padding-left: 40px
-  padding-right: 40px
+  padding-left: 30px
+  padding-right: 30px
 
 +r($sm)
   .container
     padding-left: 20px
     padding-right: 20px
+
+
+
+.page-body
+  display: flex
+  flex-direction: column
+
+  &__main
+    flex: 1 1 100%
+    max-height: 100%
+
+.page-main
+  display: flex
+  flex-direction: column
+
+  &__header
+    flex-shrink: 0
+    margin-top: 50px
+    border-bottom: 1px solid $borderColor
+  
+  &__body
+    flex: 1 1 auto
+    min-height: 0
+
+
+.main-header
+  &__info
+    display: flex
+    align-items: center
+    margin-bottom: 21px
+
+  &__heading
+    flex: 1 1 auto
+    margin: 0
+  
+  &__actions
+    flex: 0 0 auto
+    margin-left: 30px
+  
+  &__link
+    color: $colorLight
+  
+  &__primary-menu
+    flex: 1 1 auto
+    margin: 0 0 -1px
+
+
+.main-body
+  display: flex
+  flex-direction: column
+
+  &__content
+    flex: 1 1 auto
+    min-height: 0
+  
+  &__footer
+    flex-shrink: 0
+    border-top: 1px solid $borderColor
+
+
+.main-content
+  overflow-x: hidden
+  overflow-y: auto
+
+  &__inner
+    padding: 30px 0
+
+  &__form
+    max-width: 640px
+  
+  &__guest
+    margin-left: auto
+    margin-right: auto
+    max-width: 500px
+  
+  &__fieldset
+    margin: 0
+    padding: 0
+    border: 0
+    border-bottom: 1px solid $borderColor
+
+    &:last-child
+      border-bottom: 0
+
+    .main-content__inner
+      display: flex
+
+    .main-content__form
+      flex: 1 1 auto
+      max-width: 410px
+  
+  &__legend
+    flex: 0 0 330px
+    font-size: 18px
+    font-weight: 700
+
+
+.main-footer
+  padding: 30px 0
+
+  &__container
+    display: flex
+  
+  &__btn
+    margin-left: auto
+
+
+
+.content-guest
+  &__header
+    margin-bottom: 10px
+    padding-left: 30px
+  
+  &__logo
+    .ico
+      width: 83px
+      height: 30px
+      fill: $colorPrimary
+  
+  &__body
+    padding: 30px
+    border: 1px solid $borderColor
+  
+  &__heading
+    margin: 0 0 10px
+    font-size: 18px
+  
+  &__form
+    margin-top: 20px
+  
+  &__caption
+    margin: 0 0 20px
+
+  &__ui-group
+    margin-bottom: 25px
+  
+  &__forgot
+    color: $colorLight
+  
+  &__footer
+    margin-top: 25px
+    font-size: 16px
+    text-align: center
+  
+  &__link
+    color: $colorPrimary
+
+
+
+.primary-menu
+  display: flex
+  padding-left: 0
+  list-style: none
+
+  &__item
+    margin-right: 50px
+
+    &:last-child
+      margin-right: 0
+  
+  &__link
+    position: relative
+    display: block
+    padding-bottom: 25px
+
+    &.is-active
+      font-weight: 700
+
+      &::after
+        content: ''
+        position: absolute
+        left: 0
+        bottom: 0
+        width: 100%
+        height: 4px
+        background-color: $colorPrimary
+
+
 
 // REMOVE FOR PRODUCTION !
 .dev-bp-debug
