--- a/src/sass/utilities/_variables.sass
+++ b/src/sass/utilities/_variables.sass
@@ -7,18 +7,21 @@ $xl: 1200
 $hd: 1440
 
 // FONTS
-$baseFont: "Helvetica"
+$baseFont: "ProximaNova"
 $systemFont: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica', 'Ubuntu', 'Cantarell', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'
 
 // COLORS
-$fontColor: #333
+$fontColor: #0B1C2D
 $fontColor50: rgba($fontColor, .5)
-$colorPrimary: #FBBF1B
+$colorPrimary: #359BE3
 $colorGreen: #4ab68f
 $colorRed: #f45b63
 $colorRedHover: lighten($colorRed, 15%)
-$borderColor: #e8e8e8
-$colorBg: #E5E5E5
+$borderColor: #DDE5ED
+$colorBg: #F2F5FA
+$colorWhite: #FFF
+$colorLight: #8396A8
+$colorDanger: #E13D10
 
 // OPTIONS
 $transitionSpeed: .25s
