--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -14,9 +14,116 @@ block content
 
           ._actions
     
-    form.main-body._body(action='/' method='post')
+    .main-body._body
       .main-content._content
         ._container.container
-          ._inner
+          ._list
 
-            
+            // start project card 
+            .project-card._project-card
+              ._content
+                ._inner
+                  ._header
+                    h2._heading
+                      a._link(href='#' title='') Проектирование интерфейса личного кабинета
+                    .progress._progress
+                      ._cell.-complete
+                      ._cell
+                      ._cell
+                      ._cell
+                      ._title Прогресс проекта: 25%
+                  p._caption Пуантилизм, зародившийся в музыкальных микроформах начала ХХ столетия, нашел далекую историческую параллель в лице средневекового гокета.
+                  ._properties
+                    ._property Азбука Вкуса
+                    ._property Полный доступ
+
+              ._info
+                ._date
+                  span._label Изменено: 
+                  | 21.03.2019, 16:15
+                a.btn.btn-outline._btn(href='#' title='Перейти к проекту') Перейти к проекту
+            // end project card 
+
+            // start project card 
+            .project-card._project-card
+              ._content
+                ._inner
+                  ._header
+                    h2._heading
+                      a._link(href='#' title='') Создание брендбука
+                    .progress._progress
+                      ._cell.-complete
+                      ._cell.-complete
+                      ._cell.-complete
+                      ._cell.-complete
+                      ._title Прогресс проекта: 100%
+                  ._properties
+                    ._property Спортмастер
+                    ._property Ограниченный доступ
+
+              ._info
+                ._date
+                  span._label Изменено: 
+                  | 18.03.2019, 15:36
+                a.btn.btn-outline._btn(href='#' title='Перейти к проекту') Перейти к проекту
+            // end project card 
+
+            // start project card 
+            .project-card._project-card
+              ._content
+                ._inner
+                  ._header
+                    h2._heading
+                      a._link(href='#' title='') Концепция сайта для тендера
+                    .progress._progress
+                      ._cell.-complete
+                      ._cell.-complete
+                      ._cell
+                      ._cell
+                      ._title Прогресс проекта: 50%
+                  ._properties
+                    ._property YAMI YAMI
+                    ._property Ограниченный доступ
+
+              ._info
+                ._date
+                  span._label Изменено: 
+                  | 16.03.2019, 10:02
+                a.btn.btn-outline._btn(href='#' title='Перейти к проекту') Перейти к проекту
+            // end project card 
+
+            // start project card 
+            .project-card._project-card
+              ._content
+                ._inner
+                  ._header
+                    h2._heading
+                      a._link(href='#' title='') Подключение к CRM-системе Tillypad
+                    .progress._progress
+                      ._cell.-complete
+                      ._cell
+                      ._cell
+                      ._cell
+                      ._title Прогресс проекта: 25%
+                  p._caption Панладовая система регрессийно символизирует доиндустриальный тип политической культуры.
+                  ._properties
+                    ._property Азбука Вкуса
+                    ._property Ограниченный доступ
+
+              ._info
+                ._date
+                  span._label Изменено: 
+                  | 21.03.2019, 16:15
+                a.btn.btn-outline._btn(href='#' title='Перейти к проекту') Перейти к проекту
+            // end project card 
+          
+          .content-pagenav._pagenav
+            ._list
+              a._link(href='#' title='') 1
+              a._link(href='#' title='') 2
+              a._link.-current(href='#' title='') 3
+              a._link(href='#' title='') 4
+              a._link(href='#' title='') 5
+              a._link(href='#' title='') ...
+              a._link(href='#' title='') 12
+            //- a._next(href='#' title='Следующая страница')
