--- a/src/sass/utilities/_variables.sass
+++ b/src/sass/utilities/_variables.sass
@@ -22,6 +22,7 @@ $colorBg: #F2F5FA
 $colorWhite: #FFF
 $colorLight: #8396A8
 $colorDanger: #E13D10
+$colorIcon: #A0B1BB
 
 // OPTIONS
 $transitionSpeed: .25s
