--- a/src/components/header/_header.sass
+++ b/src/components/header/_header.sass
@@ -18,8 +18,37 @@
     justify-content: center
     flex: 0 0 142px
     max-width: 142px
+    margin-right: 30px
     border-right: 1px solid rgba($colorWhite, 0.15)
 
     .ico-mono-logo
       width: 82px
       height: 30px
+  
+  &__primary-menu
+    margin: 0
+
+    .primary-menu__link
+      padding-top: 25px
+      height: 100%
+      font-size: 13px
+      text-transform: uppercase
+
+    .primary-menu__link.is-active:after
+      background-color: $colorWhite
+  
+  &__actions
+    display: flex
+    margin-left: auto
+  
+  &__action
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-shrink: 0
+    width: 70px
+    border-left: 1px solid rgba($colorWhite, 0.15)
+
+    .ico
+      width: 20px
+      height: 20px
