--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -44,6 +44,9 @@
   
   &__content
     flex: 1 1 auto
+  
+  &__item
+    margin-top: 13px
 
   & > label
     display: block
@@ -124,6 +127,70 @@
       // background-position: center
       transition: transform .2s ease
     span
+      display: inline-block
+      padding-left: 35px
+      vertical-align: top
+      line-height: 1.3
+      font-size: 14px
+      cursor: pointer
+
+
+/* Radio
+.ui-radio
+  input
+    display: none
+    width: 0.1px
+    height: 0.1px
+    opacity: 0
+    position: absolute
+    top: 0
+    left: 0
+    &:checked
+      + label
+        &::before
+          border-color: $colorPrimary
+          background-color: $colorPrimary
+        &::after
+          transform: translateY(-50%) scale(1)
+  label
+    display: block
+    width: 100%
+    position: relative
+    cursor: pointer
+    &::before
+      position: absolute
+      left: 0
+      top: 50%
+      transform: translateY(-50%)
+      display: inline-block
+      content: ' '
+      size: 20px
+      margin-top: -1px
+      background-color: white
+      border: 1px solid #AFB7C0
+      border-radius: 50%
+      cursor: pointer
+      vertical-align: middle
+      cursor: pointer
+      transition: all $transitionSpeed ease-in-out
+    &::after
+      position: absolute
+      left: 6px
+      top: 50%
+      transform: translateY(-50%) scale(0)
+      margin-top: -1px
+      display: inline-block
+      content: ' '
+      size: 10px
+      background: $colorWhite
+      border-radius: 50%
+      // background-image: svg-load('../../images/svg/checkbox.svg')
+      // background-repeat: no-repeat
+      // background-position: center
+      transition: transform .2s ease
+    span
+      position: relative
+      top: 3px
       display: inline-block
       padding-left: 35px
       vertical-align: top
