--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -81,6 +81,7 @@ body, html
     flex: 1 1 100%
     max-height: 100%
 
+
 .page-main
   display: flex
   flex-direction: column
@@ -134,6 +135,11 @@ body, html
   overflow-x: hidden
   overflow-y: auto
 
+  &__container
+    display: flex
+    flex-direction: column
+    min-height: 100%
+
   &__inner
     padding: 30px 0
 
@@ -165,6 +171,21 @@ body, html
     flex: 0 0 330px
     font-size: 18px
     font-weight: 700
+  
+  &__intro
+    padding: 20px 0
+  
+  &__project-card
+    border-bottom: 1px solid $borderColor
+  
+  &__info
+    margin-bottom: 30px
+  
+  &__comments
+    flex: 1 1 auto
+  
+  &__pagenav
+    margin-top: 30px
 
 
 .main-footer
@@ -172,10 +193,14 @@ body, html
 
   &__container
     display: flex
+    align-items: center
+    justify-content: space-between
+  
+  &__return
+    color: $colorLight
   
   &__btn
     margin-left: auto
-
 
 
 .content-guest
@@ -218,6 +243,117 @@ body, html
     color: $colorPrimary
 
 
+.content-intro
+  display: flex
+
+  &__content
+    display: flex
+    flex-direction: column
+    flex: 1 1 50%
+    max-width: 50%
+  
+  &__heading
+    margin: 0 0 25px
+    max-width: 480px
+    font-size: 36px
+  
+  &__stats-info
+    margin-top: auto
+  
+  &__info
+    flex: 1 1 50%
+    max-width: 50%
+    padding-top: 10px
+    
+  &__steps-list
+    margin: 0
+    max-width: 450px
+
+
+.content-info
+  padding: 16px 0 16px 25px
+  border-left: 4px solid #A0B1BB
+
+  &__heading
+    margin: 0 0 13px
+    font-size: 16px
+  
+  &__content
+    display: flex
+  
+  &__label
+    flex-shrink: 0
+    margin-right: 7px
+    white-space: nowrap
+  
+  &__tags
+    margin: 0
+
+
+.content-grid
+  &__inner
+    display: flex
+    flex-wrap: wrap
+    margin: 0 -13px -25px
+  
+  &__column
+    flex: 1 1 20%
+    max-width: 20%
+    margin-bottom: 25px
+    padding-left: 13px
+    padding-right: 13px
+
+
+.content-comments
+  display: flex
+  flex-wrap: wrap
+
+  &__list
+    flex: 1 1 50%
+    max-width: 50%
+    padding: 30px 30px 30px 0
+    border-right: 1px solid $borderColor
+  
+  &__comment-card
+    margin-bottom: 24px
+    padding-bottom: 24px
+    border-bottom: 1px solid $borderColor
+
+    &:last-child
+      margin-bottom: 0
+      padding-bottom: 0
+      border-bottom: 0
+  
+  &__add
+    flex: 1 1 50%
+    max-width: 50%
+    padding: 30px 0 30px 30px
+
+
+.content-pagenav
+  display: flex
+
+  &__list
+    display: flex
+    border: 1px solid $borderColor
+    border-radius: 4px
+  
+  &__link
+    display: flex
+    align-items: center
+    justify-content: center
+    width: 40px
+    height: 40px
+    color: $colorLight
+    border-right: 1px solid $borderColor
+
+    &:last-child
+      border-right: 0
+
+    &--current
+      color: $colorWhite
+      background-color: $colorPrimary
+
 
 .primary-menu
   display: flex
@@ -246,8 +382,278 @@ body, html
         width: 100%
         height: 4px
         background-color: $colorPrimary
+  
+  &__count
+    margin-left: 10px
+    padding: 5px 4px 3px
+    display: inline-block
+    min-width: 22px
+    color: $colorPrimary
+    font-size: 12px
+    font-weight: 700
+    text-align: center
+    line-height: 1
+    background-color: $colorBg
+    vertical-align: middle
+    border-radius: 4px
 
 
+.stats-info
+  display: flex
+
+  &__item
+    display: flex
+    align-items: flex-start
+    flex-direction: column
+    margin-right: 110px
+    max-width: 130px
+
+    &:last-child
+      margin-right: 0
+  
+  &__value
+    margin: 0 0 10px
+    color: $colorPrimary
+    font-size: 48px
+    font-weight: 700
+    line-height: 1
+  
+  &__caption
+    margin: 0 0 17px
+  
+  &__link
+    margin-top: auto
+    color: $colorPrimary
+    font-weight: 700
+
+
+.steps-list
+  padding: 0
+  font-size: 16px
+  list-style: none
+
+  &__item
+    display: flex
+    align-items: center
+    margin-bottom: 20px
+
+    &:last-child
+      margin-bottom: 0
+  
+  &__icon
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-shrink: 0
+    margin-right: 30px
+    width: 60px
+    height: 60px
+    border: 1px solid $borderColor
+    border-radius: 50%
+
+    .ico
+      width: 20px
+      height: 20px
+  
+  &__title
+    flex: 1 1 auto
+
+
+.project-card
+  display: flex
+  align-items: flex-start
+  position: relative
+  z-index: 1
+  padding: 26px 0
+
+  &::before
+    content: ''
+    position: absolute
+    top: -1px
+    left: -30px
+    right: -30px
+    bottom: -1px
+    z-index: -1
+    background-color: $colorBg
+    opacity: 0
+
+  &:hover
+    z-index: 2
+
+    &::before
+      opacity: 1
+
+  &__content
+    flex: 1 1 auto
+    padding-right: 30px
+  
+  &__inner
+    max-width: 640px
+  
+  &__heading
+    margin: 0 15px 10px 0
+    display: inline-block
+    font-size: 18px
+  
+  &__tags
+    position: relative
+    top: -2px
+    margin: 0
+  
+  &__caption
+    margin: 0 0 10px
+  
+  &__properties
+    display: flex
+    flex-wrap: wrap
+  
+  &__property
+    margin-right: 30px
+  
+  &__info
+    display: flex
+    align-items: center
+    flex: 0 0 auto
+  
+  &__date
+    margin-right: 30px
+    white-space: nowrap
+  
+  &__label
+    color: $colorLight
+
+
+.comment-card
+  &__header
+    display: flex
+    flex-wrap: wrap
+    margin-bottom: 8px
+  
+  &__title
+    margin: 0 7px 0 0
+    font-weight: 700
+  
+  &__caption
+    margin: 0 0 7px
+  
+  &__date
+    color: $colorLight
+    font-size: 12px
+
+
+.progress
+  display: inline-flex
+  position: relative
+  height: 5px
+  background-color: #D2DBE5
+
+  &__cell
+    flex-shrink: 0
+    width: 8px
+    border-right: 1px solid $colorWhite
+
+    &:last-child
+      border-right: 0
+    
+    &--complete
+      background-color: $colorPrimary
+
+  &__title
+    position: absolute
+    left: 50%
+    bottom: 100%
+    margin-bottom: 13px
+    padding: 10px
+    display: none
+    font-size: 12px
+    line-height: 1
+    background-color: $colorBg
+    white-space: nowrap
+    transform: translate(-50%, 0)
+    box-shadow: 0px 1px 4px rgba(11, 28, 45, 0.15);
+
+
+.tags
+  display: inline-flex
+  flex-wrap: wrap
+  margin-bottom: -10px
+  padding: 0
+  list-style: none
+
+  &__item
+    margin-right: 10px
+    margin-bottom: 10px
+    padding: 5px 10px 4px
+    font-size: 12px
+    line-height: 1
+    background-color: $colorBg
+    white-space: nowrap
+    overflow: hidden
+    border-radius: 4px
+
+
+.tile
+  display: flex
+  flex-direction: column
+  position: relative
+  padding: 25px 20px 24px
+  height: 100%
+  border: 1px solid $borderColor
+  border-radius: 4px
+
+  &:hover
+    background-color: $colorBg
+    border-color: $colorBg
+
+    .tile__btn-delete
+      display: block
+  
+  &--add
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    padding: 15px
+    min-height: 100px
+    color: $colorPrimary
+    text-align: center
+    border-color: $colorPrimary
+    cursor: pointer
+
+    &::before
+      content: '+'
+      margin-bottom: 7px
+      display: block
+      width: 30px
+      height: 30px
+      color: $colorWhite
+      font-size: 20px
+      font-weight: 700
+      line-height: 32px
+      background-color: $colorPrimary
+      border-radius: 50%
+  
+  &__btn-delete
+    position: absolute
+    top: 10px
+    right: 12px
+    display: none
+
+  &__heading
+    margin: 0 0 9px
+  
+  &__caption
+    margin: auto 0 0
+  
+  &__select
+    margin-top: auto
+  
+  &__label
+    margin-right: 7px
+  
+  &__selected
+    color: $colorLight
+    cursor: pointer
 
 // REMOVE FOR PRODUCTION !
 .dev-bp-debug
