--- a/src/pug/shared/_head.pug
+++ b/src/pug/shared/_head.pug
@@ -2,7 +2,7 @@
 meta(charset="utf-8")
 title= title || 'Page name'
 meta(http-equiv="X-UA-Compatible" content="IE=Edge")
-meta(name="viewport" content="width=device-width, initial-scale=1, user-scalable=no")
+meta(name="viewport" content="width=device-width, initial-scale=1")
 meta(name="theme-color" content="#fff")
 meta(name="format-detection" content="telephone=no")
 
@@ -21,7 +21,7 @@ meta(name="format-detection" content="telephone=no")
 //- link(rel='mask-icon', href='/img/touch/safari-pinned-tab.svg', color='#5bbad5')
 //- link(rel='shortcut icon', href='/img/touch/favicon.ico')
 //- meta(name='msapplication-config', content='/img/touch/browserconfig.xml')
-  
+
 // seo meta
 meta(name="description" content="Meta description")
 meta(name="keywords" content="Key, words")
@@ -39,9 +39,9 @@ meta(name='twitter:url', content='https://projectname.surge.sh')
 
 // remove for production
 meta(name="robots" content="noindex")
-    
+
 link(rel="stylesheet" media="all" href="css/app.css")
-  
+
 <!--[if lt IE 9]>
 script(src='https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js')
 script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
