header/footer style fix, js fix, barba fix

--- a/src/components/contentIntro/_stats-info.sass
+++ b/src/components/contentIntro/_stats-info.sass
@@ -38,4 +38,9 @@
     span
       margin-right: .5em
     .ico
-      font-size: 9px
+      font-size: 10px
+      transition: transform .25s $ease
+
+    &:hover
+      .ico
+        transform: translate(9px, 0px)
