--- a/src/components/footer/_footer.pug
+++ b/src/components/footer/_footer.pug
@@ -3,7 +3,7 @@ footer.page-footer
   ._container.container
     ._copyright © OCMS, 2019
 
-    a._feedback(href='#' title='Связаться с нами') Связаться с нами
-      
-      
+    a._link(href='#' title='Связаться с нами') Связаться с нами
+
+
 // PAGE-FOOTER :: END
