--- a/src/components/footer/_footer.sass
+++ b/src/components/footer/_footer.sass
@@ -8,3 +8,9 @@
   &__container
     display: flex
     justify-content: space-between
+
+  &__link
+    color: currentColor
+    transition: color .25s $ease
+    &:hover
+      color: $colorPrimary
