--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -359,47 +359,47 @@ body, html
       background-color: $colorPrimary
 
 
-.primary-menu
-  display: flex
-  padding-left: 0
-  list-style: none
+// .primary-menu
+//   display: flex
+//   padding-left: 0
+//   list-style: none
 
-  &__item
-    margin-right: 50px
+//   &__item
+//     margin-right: 50px
 
-    &:last-child
-      margin-right: 0
+//     &:last-child
+//       margin-right: 0
 
-  &__link
-    position: relative
-    display: block
-    padding-bottom: 25px
+//   &__link
+//     position: relative
+//     display: block
+//     padding-bottom: 25px
 
-    &.is-active
-      font-weight: 700
+//     &.is-active
+//       font-weight: 700
 
-      &::after
-        content: ''
-        position: absolute
-        left: 0
-        bottom: 0
-        width: 100%
-        height: 4px
-        background-color: $colorPrimary
+//       &::after
+//         content: ''
+//         position: absolute
+//         left: 0
+//         bottom: 0
+//         width: 100%
+//         height: 4px
+//         background-color: $colorPrimary
 
-  &__count
-    margin-left: 10px
-    padding: 5px 4px 3px
-    display: inline-block
-    min-width: 22px
-    color: $colorPrimary
-    font-size: 12px
-    font-weight: 700
-    text-align: center
-    line-height: 1
-    background-color: $colorBg
-    vertical-align: middle
-    border-radius: 4px
+//   &__count
+//     margin-left: 10px
+//     padding: 5px 4px 3px
+//     display: inline-block
+//     min-width: 22px
+//     color: $colorPrimary
+//     font-size: 12px
+//     font-weight: 700
+//     text-align: center
+//     line-height: 1
+//     background-color: $colorBg
+//     vertical-align: middle
+//     border-radius: 4px
 
 
 // .stats-info
