--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -11,6 +11,7 @@
 @import vendor/scrollbar
 @import vendor/selectric
 @import vendor/aos/aos
+@import vendor/tippy
 @import vendor/hamburgers
 
 @import layout/font
