--- a/src/components/header/_header.pug
+++ b/src/components/header/_header.pug
@@ -14,8 +14,8 @@
         a._link(href='forms.html' title='Анкеты') Анкеты
 
     ._actions
-      a._action(href='#' title='')
+      a._action(href='#' title='' js-tooltip data-tippy-placement="bottom" data-tippy-content="Добавить клиента")
         +svgMono('user-add')
-      a._action(href='#' title='')
+      a._action(href='#' title='' js-tooltip data-tippy-placement="bottom" data-tippy-content="Выйти")
         +svgMono('logout')
 // PAGE-HEADER :: END
