--- a/src/components/header/_header.sass
+++ b/src/components/header/_header.sass
@@ -55,6 +55,9 @@
     flex-shrink: 0
     width: 70px
     border-left: 1px solid rgba($colorWhite, 0.15)
+    transition: color .25s $ease
     .ico
       width: 20px
       height: 20px
+    &:hover
+      color: rgba($colorWhite, .5)
