--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -198,44 +198,44 @@ body, html
     margin-left: auto
 
 
-.content-guest
-  &__header
-    margin-bottom: 10px
-    padding-left: 30px
+// .auth
+//   &__header
+//     margin-bottom: 10px
+//     padding-left: 30px
 
-  &__logo
-    .ico
-      width: 83px
-      height: 30px
-      fill: $colorPrimary
+//   &__logo
+//     .ico
+//       width: 83px
+//       height: 30px
+//       fill: $colorPrimary
 
-  &__body
-    padding: 30px
-    border: 1px solid $borderColor
+//   &__body
+//     padding: 30px
+//     border: 1px solid $borderColor
 
-  &__heading
-    margin: 0 0 10px
-    font-size: 18px
+//   &__heading
+//     margin: 0 0 10px
+//     font-size: 18px
 
-  &__form
-    margin-top: 20px
+//   &__form
+//     margin-top: 20px
 
-  &__caption
-    margin: 0 0 20px
+//   &__caption
+//     margin: 0 0 20px
 
-  &__ui-group
-    margin-bottom: 25px
+//   &__ui-group
+//     margin-bottom: 25px
 
-  &__forgot
-    color: $colorLight
+//   &__forgot
+//     color: $colorLight
 
-  &__footer
-    margin-top: 25px
-    font-size: 16px
-    text-align: center
+//   &__footer
+//     margin-top: 25px
+//     font-size: 16px
+//     text-align: center
 
-  &__link
-    color: $colorPrimary
+//   &__link
+//     color: $colorPrimary
 
 
 // .content-intro
