--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -1,9 +1,8 @@
 /* UI
 
-
-// WORKS KIND OF bootstrap - group have label and input
 .ui-row
   display: flex
+  flex-wrap: wrap
   margin-bottom: 25px
   margin-left: -10px
   margin-right: -10px
@@ -17,7 +16,7 @@
   &.is-6
     flex-basis: 50%
     max-width: 50%
-  
+
   &.is-auto
     flex: 0 0 auto
 
@@ -32,23 +31,23 @@
     display: flex
     align-items: flex-start
 
-    .ui-group__label
+    > label
       flex: 0 0 150px
       max-width: 150px
       margin-bottom: 0
       margin-top: 12px
       padding-right: 20px
 
-    .ui-group__ui-toggle
+    .ui-toggle
       margin-top: 12px
-  
+
   &__content
     flex: 1 1 auto
-  
+
   &__item
     margin-top: 13px
 
-  & > label
+  > label:not(.ui-input__validation)
     display: block
     margin-bottom: 12px
 
@@ -64,20 +63,29 @@
   background-color: $colorBg
   border-radius: 4px
   padding: 11px 15px
+  transition: background .25s $ease, border .25s $ease
   &.has-error
-    color: $colorRed
-    &::placeholder
-      color: rgba($colorRed, .5)
+    background: #F8D7CF
+    border-color: #F8D7CF
+  &:focus
+    background: white
+    border-color: $colorLight
+
 
 .ui-input textarea
   resize: vertical
 
+.ui-input__validation
+  display: block
+  color: $colorDanger
+  font-size: 12px
+  margin-top: .5em
+  margin-bottom: -.7em
 
 
-/* Checkbox
-.ui-checkbox
+/* Checkbox/radio
+.ui-checkbox, .ui-radio
   input
-    display: none
     width: 0.1px
     height: 0.1px
     opacity: 0
@@ -105,12 +113,7 @@
       size: 20px
       margin-top: -1px
       background-color: white
-      border: 1px solid #AFB7C0
-      border-radius: 4px
-      cursor: pointer
-      vertical-align: middle
-      cursor: pointer
-      transition: all $transitionSpeed ease-in-out
+      border: 1px solid $borderColor
     &::after
       position: absolute
       left: 6px
@@ -120,83 +123,39 @@
       display: inline-block
       content: ' '
       size: 10px
-      background: $colorPrimary
       border-radius: 50%
-      // background-image: svg-load('../../images/svg/checkbox.svg')
-      // background-repeat: no-repeat
-      // background-position: center
-      transition: transform .2s ease
-    span
-      display: inline-block
-      padding-left: 35px
-      vertical-align: top
-      line-height: 1.3
-      font-size: 14px
-      cursor: pointer
-
-
-/* Radio
-.ui-radio
-  input
-    display: none
-    width: 0.1px
-    height: 0.1px
-    opacity: 0
-    position: absolute
-    top: 0
-    left: 0
-    &:checked
-      + label
-        &::before
-          border-color: $colorPrimary
-          background-color: $colorPrimary
-        &::after
-          transform: translateY(-50%) scale(1)
-  label
-    display: block
-    width: 100%
-    position: relative
-    cursor: pointer
-    &::before
-      position: absolute
-      left: 0
-      top: 50%
-      transform: translateY(-50%)
-      display: inline-block
-      content: ' '
-      size: 20px
-      margin-top: -1px
-      background-color: white
-      border: 1px solid #AFB7C0
-      border-radius: 50%
-      cursor: pointer
-      vertical-align: middle
-      cursor: pointer
-      transition: all $transitionSpeed ease-in-out
-    &::after
-      position: absolute
-      left: 6px
-      top: 50%
-      transform: translateY(-50%) scale(0)
-      margin-top: -1px
-      display: inline-block
-      content: ' '
-      size: 10px
-      background: $colorWhite
-      border-radius: 50%
-      // background-image: svg-load('../../images/svg/checkbox.svg')
-      // background-repeat: no-repeat
-      // background-position: center
       transition: transform .2s ease
     span
       position: relative
       top: 3px
       display: inline-block
-      padding-left: 35px
+      padding-left: 30px
       vertical-align: top
       line-height: 1.3
       font-size: 14px
       cursor: pointer
+
+.ui-checkbox
+  label
+    &::before
+      border-radius: 4px
+    &::after
+      background: $colorPrimary
+
+
+/* Radio
+.ui-radio
+  input
+    &:checked
+      + label
+        &::before
+          background-color: $colorPrimary
+
+  label
+    &::before
+      border-radius: 50%
+    &::after
+      background: $colorWhite
 
 
 /* Toggle
@@ -218,7 +177,7 @@
 
         &::before
           left: 14px
-  
+
   &__handle
     position: relative
     display: block
@@ -254,7 +213,7 @@
     width: 40px
     font-size: 22px
     background-color: $colorWhite
-  
+
   &__input
     flex: 1 1 auto
     min-width: 0
