refactored  to white

--- a/src/components/header/_header.sass
+++ b/src/components/header/_header.sass
@@ -1,6 +1,6 @@
 /* HEADER
 .page-header
-  color: $colorWhite
+  color: white
   background: $colorPrimary
   will-change: transform
   backface-visibility: hidden
@@ -20,10 +20,10 @@
     max-width: 142px
     font-size: 0
     margin-right: 30px
-    border-right: 1px solid rgba($colorWhite, 0.15)
+    border-right: 1px solid rgba(white, 0.15)
     transition: color .25s $ease
     &:hover
-      color: rgba($colorWhite, .5)
+      color: rgba(white, .5)
     .ico-mono-logo
       transform: translateY(2px)
       font-size: 30px
@@ -40,9 +40,9 @@
 
     .primary-menu__link
       &:hover
-        color: rgba($colorWhite, .5)
+        color: rgba(white, .5)
       &.is-active:after
-        background-color: $colorWhite
+        background-color: white
 
   &__actions
     display: flex
@@ -54,10 +54,10 @@
     justify-content: center
     flex-shrink: 0
     width: 70px
-    border-left: 1px solid rgba($colorWhite, 0.15)
+    border-left: 1px solid rgba(white, 0.15)
     transition: color .25s $ease
     .ico
       width: 20px
       height: 20px
     &:hover
-      color: rgba($colorWhite, .5)
+      color: rgba(white, .5)
