--- a/src/sass/elements/_buttons.sass
+++ b/src/sass/elements/_buttons.sass
@@ -22,7 +22,7 @@ button
     width: 100%
 
   &-primary
-    color: $colorWhite
+    color: white
     background: $colorPrimary
     &:hover
       background: #2A87C7
