--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -155,7 +155,7 @@
     &::before
       border-radius: 50%
     &::after
-      background: $colorWhite
+      background: white
 
 
 /* Toggle
@@ -193,7 +193,7 @@
       top: 3px
       left: 3px
       size: 14px
-      background-color: $colorWhite
+      background-color: white
       border-radius: 50%
       transition: left .2s ease
 
@@ -212,7 +212,7 @@
     flex-shrink: 0
     width: 40px
     font-size: 22px
-    background-color: $colorWhite
+    background-color: white
 
   &__input
     flex: 1 1 auto
