--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -355,7 +355,7 @@ body, html
       border-right: 0
 
     &--current
-      color: $colorWhite
+      color: white
       background-color: $colorPrimary
 
 
@@ -554,7 +554,7 @@ body, html
   &__cell
     flex-shrink: 0
     width: 8px
-    border-right: 1px solid $colorWhite
+    border-right: 1px solid white
 
     &:last-child
       border-right: 0
@@ -630,7 +630,7 @@ body, html
       display: block
       width: 30px
       height: 30px
-      color: $colorWhite
+      color: white
       font-size: 20px
       font-weight: 700
       line-height: 32px
